<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/ss1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:text="@string/welcome_to_sdg_6_app"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!-- Water Conservation Statistics -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/water_conservation_stats"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textWaterStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#009688"
            android:padding="10dp"
            android:text="@string/water_saved_500_liters_n_reports_resolved_15"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Action Buttons -->
        <Button
            android:id="@+id/buttonReportIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/report_water_issue"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonViewTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/water_conservation_tips"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonCheckQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/check_water_quality"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonBackToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openHome"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>